# mt-rewrite

./: .gitmodules  LICENSE  README.md  mt-rewrite.cabal  stack.yaml
app/: Main.hs  TPCHSchema.hs
multimap/multimap-1.2.1/src/Data/: MultiMap.hs  SetMap.hs
src/: MtAnnotate.hs  MtLib.hs  MtOptimizer.hs  MtRewriteSelect.hs  MtRewriteWhere.hs  MtTypes.hs  MtUtils.hs
