name:                mt-rewrite
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/lucasbraun/mt-rewrite#readme
license:             BSD3
license-file:        LICENSE
author:              Lucas Braun
maintainer:          braunl@inf.ethz.ch
copyright:           2016 Lucas Braun
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MtLib
  other-modules:       MtTypes
                     , MtUtils
                     , MtAnnotate
                     , MtRewriteSelect
                     , MtRewriteWhere
                     , MtOptimizer
  build-depends:       base >= 4.7 && < 5
                     , hssqlppp
                     , text
                     , containers
                     , multimap
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable mt-rewrite-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       TPCHSchema
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , mt-rewrite
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lucasbraun/mt-rewrite

